Fix bug with scrollbar not adding space when viewing chat messages

--- a/client/src/components/Chat/ChatView/MessageContainer/MessageSearchContainer/MessageSearchResults/MessageSearchResults.css
+++ b/client/src/components/Chat/ChatView/MessageContainer/MessageSearchContainer/MessageSearchResults/MessageSearchResults.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: flex-start;
   padding: 14px 12px 0 12px;
-  background-color: rgba(228, 228, 228, 0.2);
+  background-color: rgba(228, 228, 228, 0.3);
   overflow-x: hidden;
   overflow-y: auto;
   word-break: break-all;
@@ -32,5 +32,5 @@
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
-	background-color: rgba(102, 102, 102, 0.3);
+	background-color: rgba(102, 102, 102, 0.4);
 }
