--- a/client/src/components/Chat/ChatView/MessageContainer/Messages/Messages.css
+++ b/client/src/components/Chat/ChatView/MessageContainer/Messages/Messages.css
@@ -5,12 +5,50 @@
   justify-content: flex-start;
   padding: 10px 30px 0 30px;
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
   word-break: break-all;
+}
+
+.Messages::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.0);
+	border-radius: 10px;
+}
+
+.Messages::-webkit-scrollbar
+{
+	width: 10px;
+}
+
+.Messages::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.0);
+	background-color: rgba(102, 102, 102, 0.0);
 }
 
 .Messages:hover {
   overflow-y: auto;
+}
+
+.Messages:hover::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.Messages:hover::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.Messages:hover::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+	background-color: rgba(102, 102, 102, 0.3);
 }
 
 .Messages .MessageSeparator {
